# pico-ir-lib

./: CHANGELOG.md  README.md  cz.json  settings.cmake
example/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  IR_Sensor.cpp  NAC_Protocol.cpp  NAC_Protocoll.cpp  NEC_Protocol.cpp  bit_bang.cpp
src/includes/: IR_Sensor.h  NAC_Protocoll.h  NEC_Protocol.h  bit_bang.h
